# multiple_aruco_tf_ros2

./: README.md
multiple_aruco_ros2/: CMakeLists.txt  package.xml
multiple_aruco_ros2/launch/: get_image.launch  get_transformation.launch  solo_image.launch
multiple_aruco_ros2/src/: calibrar_camara.cpp  multiple_aruco_tf_ros2.cpp  obtener_imagen.cpp  relative_pose.cpp
multiple_aruco_ros2/src/respaldos/: relative.cpp  relative_pose.cpp
